# pass-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh  service_account_test.sh
pass/: Cargo.toml
pass-auth/: Cargo.toml
pass-auth/src/: authenticator.rs  callbacks.rs  client_builder.rs  config.rs  error.rs  extra_password.rs  interactive_login.rs  lib.rs  os.rs  personal_access_token.rs  post_login.rs  service_account.rs  storage.rs  store.rs  utils.rs  web_login.rs
pass-cli/: Cargo.toml  build.rs
pass-cli/src/: client.rs  constants.rs  extra_password.rs  helpers.rs  logs.rs  main.rs  storage.rs  store.rs  utils.rs
pass-cli/src/auth/: auth_helpers.rs  cli_credential_provider.rs  mod.rs  terminal_event_handler.rs
pass-cli/src/commands/: info.rs  inject.rs  login.rs  login_pat.rs  login_service_account.rs  login_web.rs  logout.rs  mod.rs  run.rs  secret_resolver.rs  settings_helper.rs  support.rs  test.rs
pass-cli/src/commands/agent/: create.rs  delete.rs  list.rs  mod.rs  monitor.rs  renew.rs
pass-cli/src/commands/agent/access/: grant.rs  mod.rs  revoke.rs
pass-cli/src/commands/invite/: accept.rs  list.rs  mod.rs  reject.rs
pass-cli/src/commands/invite/group/: accept.rs  list.rs  mod.rs
pass-cli/src/commands/item/: agent_monitor.rs  common.rs  create.rs  delete.rs  list.rs  mod.rs  move.rs  share.rs  totp.rs  trash.rs  untrash.rs  update.rs  view.rs
pass-cli/src/commands/item/alias/: create.rs  mod.rs
pass-cli/src/commands/item/attachment/: mod.rs  (+1 more)
pass-cli/src/commands/password/: generate.rs  mod.rs  score.rs
pass-cli/src/commands/personal_access_token/: create.rs  delete.rs  list.rs  mod.rs  renew.rs
pass-cli/src/commands/session/: lock.rs  mod.rs  remove_lock.rs  unlock.rs
pass-cli/src/commands/settings/: mod.rs  set.rs  unset.rs  view.rs
pass-cli/src/commands/share/: list.rs  mod.rs
pass-cli/src/commands/ssh_agent/: agent.rs  daemon.rs  debug.rs  event_handler.rs  event_processor.rs  key_load.rs  key_storage.rs  load_agent.rs  mod.rs  pass_key.rs  ssh_key_parsing.rs
pass-cli/src/commands/totp/: generate.rs  mod.rs
pass-cli/src/commands/update/: check.rs  download.rs  install_source.rs  manifest.rs  mod.rs  platform.rs  replace.rs  state.rs  track.rs
pass-cli/src/commands/user/: info.rs  mod.rs
pass-cli/src/commands/vault/: create.rs  delete.rs  list.rs  members.rs  mod.rs  share.rs  transfer.rs  update.rs
pass-cli/src/features/: account.rs  env_key_provider.rs  keyring.rs  mod.rs  pgp.rs
pass-cli/src/fido/: authenticator.rs  error.rs  mod.rs
pass-cli/src/platform/: mod.rs  windows_permissions.rs
pass-cli/src/storage/: core_event_storage.rs  data_storage.rs  folder_key_storage.rs  mod.rs  session_storage.rs  share_key_storage.rs
pass-cli/src/telemetry/: event.rs  mod.rs
pass-db/: Cargo.toml
pass-db/src/: db.rs  db_manager.rs  lib.rs  migration.rs
pass-db/src/models/: activity_time.rs  core_event_cursor.rs  folder_key.rs  mod.rs  share_key.rs  telemetry_event.rs  user_setting.rs
pass-db/src/tests/: mod.rs
pass-domain/: Cargo.toml  build.rs
pass-domain/proto/: action_payload.proto
pass-domain/src/: crypto.rs  feature_flag.rs  lib.rs  macros.rs  utils.rs
pass-domain/src/features/: account_crypto.rs  client_features.rs  core_event_storage.rs  data_storage.rs  folder_key_storage.rs  fs.rs  local_key_provider.rs  mod.rs  pgp_crypto.rs  share_key_storage.rs  user_events_handler.rs
pass-domain/src/models/: account_type.rs  action.rs  action_payload.rs  address.rs  events.rs  folder.rs  group.rs  invite.rs  mod.rs  personal_access_token.rs  service_account.rs  vault.rs
pass-domain/src/models/item/: attachment.rs  field.rs  flags.rs  mod.rs
pass-domain/src/models/share/: member.rs  mod.rs  role.rs
pass-domain/src/protos/: mod.rs
pass-domain/src/protos/action_payload/: action_payload.rs  mod.rs
pass-domain/src/protos/file/: file_v1.rs  mod.rs
pass-domain/src/protos/item/: item_v1.rs  mod.rs
pass-domain/src/protos/vault/: mod.rs  vault_v1.rs
pass-domain/src/telemetry/: mod.rs
pass-domain/src/types/: address_key.rs  event.rs  folder_key.rs  key.rs  mod.rs  passphrase.rs  share_key.rs  user_key.rs
pass-domain/tests/: item_update_tests.rs
pass-pgp/: Cargo.toml
pass-pgp/src/: account.rs  lib.rs  pgp.rs
pass/src/: cache.rs  client.rs  client_features.rs  common.rs  constants.rs  core_events.rs  error.rs  feature_flags.rs  first_time_setup.rs  info.rs  lib.rs  local_crypto.rs  logout.rs  macros.rs  monitor.rs  muon_ext.rs  pagination.rs  password.rs  ping.rs  telemetry.rs  user_keys.rs  utils.rs
pass/src/account/: address.rs  address_key.rs  key_salts.rs  keys.rs  mod.rs  org.rs  settings.rs
pass/src/crypto/: constants.rs  encrypt_invite_keys.rs  mod.rs  open_invite_key.rs  reencrypt_group_invite_keys.rs  reencrypt_invite_keys.rs  share_key.rs
pass/src/events/: handle.rs  listen.rs  mod.rs
pass/src/folder/: create.rs  delete.rs  list.rs  mod.rs  move_folder.rs  open.rs  update.rs
pass/src/invite/: accept.rs  create.rs  list.rs  mod.rs  reject.rs
pass/src/invite/group/: accept.rs  keys.rs  list.rs  mod.rs
pass/src/item/: delete.rs  download_attachment.rs  find.rs  get_one.rs  item_keys.rs  list.rs  members.rs  mod.rs  move.rs  move_to_folder.rs  open.rs  revisions.rs  share.rs  trash.rs  update.rs
pass/src/item/alias/: create.rs  mod.rs  options.rs
pass/src/item/create/: batch.rs  common.rs  credit_card.rs  custom.rs  identity.rs  login.rs  mod.rs  note.rs  ssh_key.rs  wifi.rs
pass/src/permission/: mod.rs
pass/src/personal_access_token/: create.rs  delete.rs  grant.rs  list.rs  list_access.rs  mod.rs  renew.rs  revoke.rs
pass/src/service_account/: create.rs  delete.rs  grant.rs  list.rs  list_access.rs  mod.rs  revoke.rs  update.rs
pass/src/share/: keys.rs  list.rs  mod.rs  open_key.rs
pass/src/test_tools/: client_ext.rs  client_features.rs  helpers.rs  mod.rs  muon_ext.rs  setup_user_data.rs
pass/src/user/: access.rs  lock.rs  mod.rs
pass/src/vault/: create.rs  delete.rs  find.rs  list.rs  members.rs  mod.rs  share.rs  transfer.rs  update.rs
(+75 files in other folders)
