[workspace]
members = [
    "pass-auth",
    "pass-cli",
    "pass-db",
    "pass-domain",
    "pass-fs",
    "pass-pgp",
    "pass"
]
resolver = "2"

[workspace.dependencies]
muon = { version = "1.9.0", registry = "proton", features = ["tls-tokio-rustls", "unsealed", "util", "testing-runner", "testing-server", "other-platform"] }
proton-crypto = { version = "0.9.0", registry = "proton", default-features = false, features = ["rustpgp"] }
proton-crypto-account = { version = "0.14.0", registry = "proton", default-features = false, features = ["rustpgp"] }

proton-pass-common = {  git = "ssh://git@gitlab.protontech.ch/proton/clients/pass/proton-pass-common.git", rev = "75c619d2c48c5c44077ba53647a1f941b0dd6d37" }

anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10.1"
futures = "0.3"
jiff = { version = "0.2.18", features = ["serde"] }
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
rand = "0.9.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.8"
tracing = "0.1"
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "js"] }
zeroize = { version = "1.8", features = ["derive"] }
