[workspace]
members = [
    "pass-auth",
    "pass-cli",
    "pass-db",
    "pass-domain",
    "pass-fs",
    "pass-pgp",
    "pass"
]
resolver = "2"

[workspace.dependencies]
muon = { version = "2.4.1", registry = "proton", features = ["transport-hyper", "full-base", "unsealed", "other-platform"] }
muon-test = { version = "1.1.0", registry = "proton" }
proton-crypto = { version = "0.12.2", registry = "proton", default-features = false, features = ["rustpgp"] }
proton-crypto-account = { version = "0.18.2", registry = "proton", default-features = false, features = ["rustpgp"] }

proton-pass-common = {  git = "https://github.com/protonpass/proton-pass-common.git", tag = "1.5.2" }

anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
bytes = "1.10.1"
futures = "0.3"
jiff = { version = "0.2.18", features = ["serde"] }
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3.8"
tracing = "0.1"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.18", features = ["v4", "js"] }
zeroize = { version = "1.8", features = ["derive"] }
