[package]
name = "pass-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
pass = { path = "../pass" }
pass-domain = { path = "../pass-domain" }

aes = "0.8.4"
base64 = "0.22.1"
urlencoding = "2.1"

anyhow.workspace = true
async-trait.workspace = true
jiff.workspace = true
futures.workspace = true
muon.workspace = true
proton-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
