[package]
name = "pass-auth"
version = "2.0.0"
edition = "2024"

[dependencies]
pass = { path = "../pass" }
pass-domain = { path = "../pass-domain" }

aes = "0.8.4"
async-compat = "0.2"
rand_chacha = { version = "0.9", features = ["os_rng"] }

urlencoding = "2.1"

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
futures.workspace = true
muon.workspace = true
proton-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zeroize.workspace = true
