[package]
name = "pass-cli"
version = "1.7.0"
edition = "2024"

[dependencies]
pass = { path = "../pass" }
pass-auth = { path = "../pass-auth" }
pass-db = { path = "../pass-db" }
pass-domain = { path = "../pass-domain" }
pass-fs = { path = "../pass-fs" }
pass-pgp = { path = "../pass-pgp" }

clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6.0"
ed25519-dalek = "2.2"
futures-util = "0.3"
handlebars = "6.3.2"
keyring-core = "0.7"
open = "5.3.2"
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
p521 = { version = "0.13", features = ["ecdsa"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
rpassword = "7.3.1"
rand = "0.8"
rsa = "0.9"
semver = "1.0"
sha1 = "0.10"
sha2 = "0.10"
ssh-agent-client-rs = "1.1.2"
ssh-agent-lib = "0.5.1"
ssh-key = { version = "0.6.7", features = ["crypto", "ed25519", "rsa", "p256", "p384", "p521", "encryption"] }
tracing-subscriber = { version = "0.3", features = ["default"] }
urlencoding = "2.1"
zeroizing-alloc = "0.1.0"

anyhow.workspace = true
base64.workspace = true
async-trait.workspace = true
jiff.workspace = true
futures.workspace = true
muon.workspace = true
proton-pass-common.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tempfile = { workspace = true, optional = true}
tracing.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["signal", "process"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.2", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-keyutils-keyring-store = "0.2.1"
zbus-secret-service-keyring-store = { version = "0.3.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "windows")'.dependencies]
zip = "8"
windows-native-keyring-store = "0.5.1"

[dev-dependencies]
tempfile.workspace = true

[features]
default = []
internal = ["tempfile"]
no-login-restriction = []
