[package]
name = "pass-db"
version = "1.3.5"
edition = "2024"

[lib]
doctest = false

[dependencies]
pass-domain = { path = "../pass-domain" }

deadpool = "0.12"
rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher-vendored-openssl"] }

anyhow.workspace = true
jiff.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

