[package]
name = "pass-db"
version = "2.0.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
pass-domain = { path = "../pass-domain" }

deadpool = "0.13"
rusqlite = { version = "0.39.0", features = ["bundled-sqlcipher-vendored-openssl"] }

anyhow.workspace = true
jiff.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }

