[package]
name = "pass-domain"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
protobuf.workspace = true
serde.workspace = true

aes-gcm = "0.10.3"
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }

[build-dependencies]
protobuf-codegen.workspace = true
protoc-bin-vendored = "3.1.0"