[package]
name = "pass-domain"
version = "2.0.3"
edition = "2024"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
jiff.workspace = true
protobuf.workspace = true
rand.workspace = true
serde.workspace = true
uuid.workspace = true
zeroize.workspace = true

aes-gcm = "0.10.3"
strum = { version = "0.28", features = ["derive"] }

[build-dependencies]
protobuf-codegen.workspace = true
protoc-bin-vendored = "3.1.0"
