[package]
name = "pass-pgp"
version = "2.0.3"
edition = "2024"

[lib]
doctest = false

[dependencies]
pass-domain = { path = "../pass-domain" }

anyhow.workspace = true
async-trait.workspace = true
jiff.workspace = true
proton-crypto.workspace = true
proton-crypto-account.workspace = true
tracing.workspace = true
