[package]
name = "pass"
version = "0.5.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pass-domain = { path = "../pass-domain" }
muon.workspace = true
proton-pass-common.workspace = true

anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true

async-lock = "3.4.0"
base64 = "0.22.1"
bytes = "1.10.1"

[dev-dependencies]
pass-fs = {path = "../pass-fs"}
pass-pgp = {path = "../pass-pgp"}

axum-core = "0.4"
rand.workspace = true
