[package]
name = "pass"
version = "1.10.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
pass-domain = { path = "../pass-domain" }
muon.workspace = true
proton-pass-common.workspace = true

anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bytes.workspace = true
jiff.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true

async-lock = "3.4.0"
serde_repr = "0.1.20"

[dev-dependencies]
pass-fs = {path = "../pass-fs"}
pass-pgp = {path = "../pass-pgp"}
muon-test = { workspace = true }
axum = "0.8"
